# simplifi

./: .gitignore  Pipfile  README.md  bumpver.toml  pyproject.toml  regression.py  requirements.txt  simplifi.py
simplifi/: .gitignore  pyproject.toml  simplifi.py
simplifi/src/: README.md  simplifi.py
simplifi/src/simplifi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/simplifi.egg-info/: top_level.txt
