[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "simplifi"
version = "1.0.1"
authors = [
  { name="Steven McWilliams", email="skmcwilliams@protonmail.com" },
]
description = "Class for Black-Scholes option pricing and Greeks calculation with real-time data integration."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
dependencies = [
  "numpy >= 1.23",
  "pandas >= 1.5",
  "scipy >= 1.10",
  "plotly >= 5.0",
  "yahooquery >= 2.2",
  "requests >= 2.28",
  "beautifulsoup4 >= 4.11",
]
[project.urls]
Homepage = "https://github.com/skmcwilliams/simplifi"
Issues = "https://github.com/skmcwilliams/simplifi/issues"

